# mordle

./: .gitignore  Cargo.toml  mordle-dict.txt
src/: char_pos.rs  char_positions.rs  dict.rs  lib.rs  line_reader.rs  main.rs
src/attempt/: attempt_char.rs  char_result.rs  error.rs  mod.rs
src/game/: error.rs  mod.rs  status.rs
src/solver/: constraints.rs  mod.rs
