[package]
name = "mordle"
version = "0.1.0"
edition = "2021"
rust-version = "1.68.2"

[[bin]]
name = "dict"

[profile.release-lto]
inherits = "release"
lto = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = [ "derive" ] }
itertools = "0.10"
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
rand = "0.8"
